--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -1,11 +1,11 @@
 name: Build Wheels
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - '.github/run-build-wheels'
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: 'Reason'
+        required: true
 
 jobs:
   build_wheels:
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
+      - run: |
+         echo "Reason for running: ${{ github.event.inputs.reason }}"
+         echo "dir: $(pwd) | $(ls)"
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
         name: Install Python
@@ -24,9 +27,10 @@ jobs:
           python -m pip install cibuildwheel
       - name: Build wheels
         env:
-          CIBW_BEFORE_BUILD: bash scripts/before_ci_build.sh
+          CIBW_BEFORE_BUILD: bash .github/scripts/install_gmp.sh
           CIBW_BUILD: cp3?-*
           CIBW_SKIP: pp*
+          CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
         run: |
           python -m cibuildwheel --output-dir wheelhouse
 
