Build Wheel breaks because #include <primesieve.hpp> is not found,
I tried a huge number of things, likely LIBRARY_PATH or LD_LIBRARY_PATH
needs to be tweaked. Possible LIBRARY_DIR for Extension or something
else entirely.

--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -27,6 +27,7 @@ jobs:
           python -m pip install cibuildwheel
       - name: Build wheels
         env:
+          CIBW_ENVIRONMENT: "LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib"
           CIBW_BEFORE_BUILD: bash .github/scripts/install_gmp.sh
           CIBW_BUILD: cp3?-*
           CIBW_SKIP: pp*
